--- a/src/app/home-scrn/home-scrn.component.html
+++ b/src/app/home-scrn/home-scrn.component.html
@@ -93,15 +93,15 @@
     <!-- Contenido con fondo blanco yng ligera transparencia -->
     <div class="content">
       <p class="description">
-        Bienvenidos a MACIZO-APP, la aplicación diseñada para ayudarte a llevar
-        una nutrición saludable y optimizada según los alimentos que tienes a
-        mano. Con MACIZO-APP puedes planificar tus comidas de manera
+        Bienvenidos a MACIZO-SYS, el sistema informático diseñado para ayudarte
+        a llevar una nutrición saludable y optimizada según los alimentos que
+        tienes a mano. Con MACIZO-SYS puedes planificar tus comidas de manera
         inteligente, reducir el desperdicio de alimentos y recibir
         recomendaciones de recetas saludables.
       </p>
 
       <!-- Botón "COMENZAR" -->
-      <button routerLink="/Salud" class="btn btn-comenzar">COMENZAR</button>
+      <button routerLink="/Sign" class="btn btn-comenzar">COMENZAR</button>
       <!--<button routerLink="/Salud" class="btn btn-comenzar">SALUD</button>-->
     </div>
   </body>
