--- a/src/app/objetivo-scrn/objetivo-scrn.component.html
+++ b/src/app/objetivo-scrn/objetivo-scrn.component.html
@@ -96,7 +96,11 @@
       </div>
     </div>
 
-    <button (click)="almacenU()" class="btn btn-success" [disabled]="!selectedOption">
+    <button
+      (click)="almacenU()"
+      class="btn btn-success"
+      [disabled]="!selectedOption"
+    >
       Continuar
     </button>
   </body>
