--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -67,7 +67,7 @@
         </div>
         <br />
 
-        <button type="submit" class="btn btn-primary btn-block">
+        <button (click)="busqueda()" class="btn btn-primary btn-block">
           Iniciar Sesión
         </button>
         <br />
